# OnCallAgent

./: .env.example  .gitignore  Makefile  README.md  config.yaml  docker-compose.yaml  pyproject.toml
data/: audit.duckdb  audit.duckdb.wal
examples/: airflow_callback.py
src/: config.py  database.py  main.py  server.py
src/agent/: core.py
src/agent/prompts/: __init__.py  system.py  templates.py
src/agent/tools/: airflow.py  databricks.py  snowflake.py  tickets.py
tests/: test_correlation_fallback.py  test_integration.py  test_task_retry.py
